<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SolarEnergyBenefitsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="BENEFICIOS"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:textColor="@android:color/holo_purple"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:columnCount="2"
        android:rowCount="4"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ahorro_energia"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/ahorro_energia"/>

                <TextView
                    android:id="@+id/text_on_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageButton"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="Ahorro en facturas de electricidad"
                    android:textColor="@color/design_default_color_on_secondary" />
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/optimizar_energia"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/optimizar_energia"/>

                <TextView
                    android:id="@+id/text_on_image_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageButton1"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="Optimización del uso de energía"
                    android:textColor="@color/design_default_color_on_secondary" />

            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/incrementar_valor"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/incrementar_valor"/>

                <TextView
                    android:id="@+id/text_on_image_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:layout_alignBottom="@id/imageButton2"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="Incremento del valor de la propiedad"
                    android:textColor="@color/design_default_color_on_secondary"/>
            </RelativeLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/energia_limpia_renovable"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/energia_limpia_renovable"/>

                <TextView
                    android:id="@+id/text_on_image_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageButton3"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="Energía limpia y renovable"
                    android:textColor="@color/design_default_color_on_secondary" />

            </RelativeLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/baterias_almacenamiento"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/baterias_almacenamiento"/>

                <TextView
                    android:id="@+id/text_on_image_button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageButton5"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="Baterías de almacenamiento"
                    android:textColor="@color/design_default_color_on_secondary" />
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/monitoreo_regular"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/monitoreo_regular"/>

                <TextView
                    android:id="@+id/text_on_image_button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageButton6"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="Monitoreo regular"
                    android:textColor="@color/design_default_color_on_secondary" />

            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/reduccion_huella_co2"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/reduccion_huella_co2"/>

                <TextView
                    android:id="@+id/text_on_image_button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageButton7"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="Reducción de la huella de CO2"
                    android:textColor="@color/design_default_color_on_secondary" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ampliacion_del_sistema"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/Ampliación_del_sistema"/>

                <TextView
                    android:id="@+id/text_on_image_button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageButton8"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="Ampliación del Sistema"
                    android:textColor="@color/design_default_color_on_secondary" />
            </RelativeLayout>
        </FrameLayout>

    </GridLayout>
    </LinearLayout>
</ScrollView>


